--- a/spring-cloud-vue-demo/src/main/resources/templates/index.html
+++ b/spring-cloud-vue-demo/src/main/resources/templates/index.html
@@ -3,8 +3,13 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <!-- default header name is X-CSRF-TOKEN -->
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.24/vue.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <script src="https://cdn.jsdelivr.net/vue/latest/vue.js"></script>
+    <script src="https://cdn.bootcss.com/vue-resource/1.3.4/vue-resource.min.js"></script>
     <title th:text="#{app.title}">Magneto</title>
 </head>
 <body>
@@ -25,7 +30,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="/user/info">User</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
@@ -39,7 +44,7 @@
     new Vue({
         el: '#app',
         data: {
-            message: 'Test Vue.js!'
+            message: "sssss"
         }
     })
 </script>
